syntax = "proto3";

package pb;

service Janken {
    rpc Show (JankenRequest) returns (JankenResponse) {}
}

enum Choice {
    // グー
    ROCK = 0;
    // チョッキ
    PAPER = 1;
    // パー
    SCISSORS = 2;
}

message JankenRequest {
    Choice my = 1;
}

message JankenResponse {
    Choice my = 1;
    Choice your = 2;
    bool is_win = 3;
}
